@@ -90,6 +90,21 @@
             <version>5.9.3</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>4.8.1</version> <!-- ou versão compatível -->
+    <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-junit-jupiter</artifactId>
+    <version>4.8.1</version>
+    <scope>test</scope>
+</dependency>
+
     </dependencies>
 
     <build>
@@ -117,9 +132,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
-                <configuration>
-                    <useModulePath>false</useModulePath>
-                </configuration>
+             <configuration>
+    <useModulePath>false</useModulePath>
+    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+  </configuration>
+
             </plugin>
 
             <!-- Plugin Spring Boot -->
